--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,24 @@
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
-    - id: flake8
-    - id: requirements-txt-fixer
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: mixed-line-ending
-      args: [--fix=lf]
-    - id: check-case-conflict
+      - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+        args: [--fix=lf]
+      - id: check-case-conflict
+      - id: no-commit-to-branch
+        args: [--branch=main]
 
--   repo: https://github.com/ambv/black
-    rev: stable
+  - repo: https://github.com/psf/black
+    rev: 22.12.0
     hooks:
-    - id: black
-      language_version: python3.7
+      - id: black
+        language_version: python3.11
 
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.15
+  - repo: https://github.com/pycqa/isort
+    rev: 5.11.4
     hooks:
-    -   id: isort
+      - id: isort
+        name: isort (python)
