--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [tool.poetry]
 name = "glacier-upload"
 version = "2.0"
-description = "A tool to upload and manage archives in AWS Glacier Vaults"
+description = "A helper tool to upload and manage archives in AWS Glacier Vaults"
 authors = ["Trapsilo Bumi <tbumi@thpd.io>"]
 license = "GPL-3.0+"
 readme = "README.md"
+packages = [{include = "glacier_upload", from = "src"}]
 repository = "https://github.com/tbumi/glacier-upload"
-keywords = "AWS glacier upload multipart"
+keywords = ["AWS", "glacier", "upload", "multipart"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
@@ -20,22 +21,25 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-boto3 = "^1.9"
-click = "^7.0"
+python = "^3.9"
+boto3 = "^1.26.47"
+click = "^8.1.3"
 
-[tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0",allows-prereleases = true}
-pytest = "^4.3"
-pytest-cov = "^2.6"
-isort = {version = "^4.3",extras = ["pyproject"]}
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
+flake8 = "^6.0.0"
+mypy = "^0.991"
+isort = "^5.11.4"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pre-commit = "^2.21.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 glacier = "glacier_upload.cli:glacier_cli"
 
 [tool.isort]
-known_standard_library = "concurrent.futures"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+profile = "black"
