--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: Upload to PyPI
-on: push
-# release:
-#   types: [published]
+on:
+  release:
+    types: [published]
 
 jobs:
   upload-to-pypi:
