--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,13 @@ classifiers = [
 python = "^3.9"
 boto3 = "^1.26.47"
 click = "^8.1.3"
+tqdm = "^4.65.0"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=22.12,<24.0"
 flake8 = "^6.0.0"
 mypy = ">=0.991,<1.4"
 isort = "^5.11.4"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
 pre-commit = ">=2.21,<4.0"
 
 [build-system]
