--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "glacier-upload"
-version = "2.1"
+version = "2.1.1"
 description = "A helper tool to upload and manage archives in AWS Glacier Vaults"
 authors = ["Trapsilo Bumi <tbumi@thpd.io>"]
 license = "GPL-3.0+"
@@ -22,16 +22,16 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-boto3 = "^1.26.47"
-click = "^8.1.3"
-tqdm = "^4.65.0"
+boto3 = "^1.34.113"
+click = "^8.1.7"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
-black = ">=22.12,<24.0"
-flake8 = "^6.0.0"
-mypy = ">=0.991,<1.4"
-isort = "^5.11.4"
-pre-commit = ">=2.21,<4.0"
+black = "^24.4.2"
+flake8 = "^7.0.0"
+mypy = "^1.10.0"
+isort = "^5.13.2"
+pre-commit = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
